added: contract files

--- a/package.json
+++ b/package.json
@@ -1,45 +1,32 @@
 {
   "name": "ghost-token-sui",
-  "version": "1.0.0-beta.1",
-  "description": "Ghost Protocol native token on Sui — cross-chain DeFi with AI governance.",
-  "main": "dist/index.js",
-  "type": "commonjs",
+  "version": "1.0.0-beta",
+  "description": "Ghost Protocol native token SDK — modular TypeScript + CLI",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "dev": "ts-node src/index.ts",
+    "mint": "ts-node scripts/mint.ts",
     "transfer": "ts-node scripts/transfer.ts",
     "quarterly-burn": "ts-node scripts/quarterlyBurn.ts",
     "force-burn": "ts-node scripts/forceBurn.ts",
     "pause-transfers": "ts-node scripts/pauseTransfers.ts",
-    "manage-exempt": "ts-node scripts/manageExempt.ts",
-    "lint": "echo \"no lint configured\"",
-    "test": "echo \"no tests yet\""
+    "add-exempt": "ts-node scripts/manageExempt.ts add",
+    "remove-exempt": "ts-node scripts/manageExempt.ts remove",
+    "multisig-admin": "ts-node scripts/multisigAdmin.ts",
+    "dao-propose": "ts-node scripts/daoVote.ts propose",
+    "dao-vote": "ts-node scripts/daoVote.ts vote",
+    "dao-execute": "ts-node scripts/daoVote.ts execute",
+    "build": "tsc",
+    "lint": "eslint . --ext .ts"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ghost-protocol-labs/ghost-token-sui.git"
-  },
-  "bugs": {
-    "url": "https://github.com/ghost-protocol-labs/ghost-token-sui/issues"
-  },
-  "homepage": "https://github.com/ghost-protocol-labs/ghost-token-sui#readme",
-  "keywords": [
-    "sui",
-    "move",
-    "defi",
-    "dao",
-    "ghost",
-    "token"
-  ],
-  "author": "Ghost Network",
-  "license": "MIT",
   "dependencies": {
     "@mysten/sui": "^2.1.0",
     "dotenv": "^17.2.3"
   },
   "devDependencies": {
-    "typescript": "^5.9.3",
+    "@types/node": "^25.1.0",
+    "eslint": "^9.39.2",
     "ts-node": "^10.9.2",
-    "@types/node": "^25.1.0"
+    "typescript": "^5.9.3"
   }
 }
